<resources>
    <string name="app_name">myanylist</string>
    <string name="status">Status</string>
    <string name="date_added">Date Added</string>
    <string name="date_created">Date Created</string>
    <string name="creator">Created By</string>
    <string name="title">Title</string>
    <string name="description">Description</string>

    <string-array name="status">
        <item>Planning</item>
        <item>In Progress</item>
        <item>Completed</item>
        <item>Dropped</item>
    </string-array>
</resources>
