<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContentListActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/content_list_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways">

            <include layout="@layout/layout_view_toolbar" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:importantForAutofill="no"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/view_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                tools:src="@drawable/sekiro" />

            <TextView
                android:id="@+id/view_title_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:paddingRight="8dp"
                android:text="@string/title"
                android:textColor="@color/textGrey"
                android:textSize="16sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/view_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/transparent"
                android:fontFamily="sans-serif"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textMultiLine|textNoSuggestions"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:paddingRight="8dp"
                android:textColor="@color/textGrey"
                android:textSize="34sp"
                tools:text="Sekiro: Shadows Die Twice" />

            <TextView
                android:id="@+id/view_description_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:paddingRight="8dp"
                android:text="@string/description"
                android:textColor="@color/textGrey"
                android:textSize="16sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/view_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/transparent"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textMultiLine|textNoSuggestions"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:textColor="@color/textGrey"
                android:textSize="14sp"
                tools:text="In Sekiro: Shadows Die Twice you are the one-armed wolf, a disgraced and disfigured warrior rescued from the brink of death. Bound to protect a young lord who is the descendant of an ancient bloodline, you become the target of many vicious enemies, including the dangerous Ashina clan." />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:paddingRight="8dp"
                android:text="@string/status"
                android:textColor="@color/textGrey"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/view_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/transparent"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textMultiLine|textNoSuggestions"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:textColor="@color/textGrey"
                android:textSize="14sp"
                tools:text="Planned" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:paddingRight="8dp"
                android:text="@string/creator"
                android:textColor="@color/textGrey"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/view_creator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/transparent"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textMultiLine|textNoSuggestions"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:textColor="@color/textGrey"
                android:textSize="14sp"
                tools:text="FromSoftware" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:paddingRight="8dp"
                android:text="@string/date_created"
                android:textColor="@color/textGrey"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/view_date_created"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/transparent"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textMultiLine|textNoSuggestions"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:textColor="@color/textGrey"
                android:textSize="14sp"
                tools:text="22 March 2019" />

            <ImageView
                android:id="@+id/content_return_to_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="32dp"
                android:src="@drawable/ic_keyboard_arrow_up_black_24dp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize" />

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/content_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:src="@drawable/ic_create_black_24dp"
        app:fabSize="auto" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>